<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/purple_dark"
            app:cardBackgroundColor="@color/grey_black"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_nama_pasal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_pasal"
                        android:textColor="@color/purple_light"
                        android:fontFamily="@font/poppins_bold"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/txt_nomor_pasal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/nomor_pasal"
                        android:textColor="@color/purple_light"
                        android:fontFamily="@font/poppins_italic"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_penjelasan_pasal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/penjelasan_pasal"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/white" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

</RelativeLayout>