<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:background="@drawable/bg_recyclerview_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_member_photo"
        android:layout_width="85dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_member_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/member_full_name" />

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_italic"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/img_member_photo"
        app:layout_constraintTop_toBottomOf="@id/txt_full_name"
        tools:text="@string/bangkit_id" />

    <TextView
        android:id="@+id/txt_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/img_member_photo"
        app:layout_constraintTop_toBottomOf="@id/txt_id"
        tools:text="@string/path" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
